// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render properly 1`] = `
.c0 {
  background-color: transparent;
  border: 0;
  border: 2px solid #272727;
  border-radius: 3px;
  color: #272727;
  cursor: pointer;
  display: inline-block;
  font-size: 10px;
  font-weight: 800;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 3;
  padding: 0 20px;
  text-transform: uppercase;
  -webkit-transition: 0.3s ease-in-out;
  transition: 0.3s ease-in-out;
}

.c0:active,
.c0:focus,
.c0:hover {
  background-color: transparent;
  border-color: #3576a7;
  color: #3576a7;
}

<button
  class="c0"
>
  My Button
</button>
`;

exports[`<Button /> should render properly 2`] = `
.c0 {
  background-color: #3576a7;
  border: 0;
  border: 2px solid transparent;
  border-radius: 3px;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-size: 10px;
  font-weight: 800;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 3;
  padding: 0 20px;
  text-transform: uppercase;
  -webkit-transition: 0.3s ease-in-out;
  transition: 0.3s ease-in-out;
}

.c0:active,
.c0:focus,
.c0:hover {
  background-color: #272727;
  border-color: transparent;
  color: #fff;
}

<button
  class="c0"
>
  My Button
</button>
`;
